--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #5A5BEB; /* Base Color */
+  --ifm-color-primary-dark: #4f54ce; /* Slightly darker */
+  --ifm-color-primary-darker: #454cb2; /* Darker */
+  --ifm-color-primary-darkest: #3c4496; /* Even more dark */
+  --ifm-color-primary-light: #656aed; /* Slightly lighter */
+  --ifm-color-primary-lighter: #7179f0; /* Lighter */
+  --ifm-color-primary-lightest: #7d89f3; /* Very light */
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #898bfa; /* Base color for dark mode, lighter than the default */
+  --ifm-color-primary-dark: #7d7ff7; /* Slightly darker */
+  --ifm-color-primary-darker: #7273f4; /* Darker */
+  --ifm-color-primary-darkest: #6667f1; /* Even more dark */
+  --ifm-color-primary-light: #9597fd; /* Slightly lighter */
+  --ifm-color-primary-lighter: #a1a3ff; /* Lighter */
+  --ifm-color-primary-lightest: #adaeff; /* Very light */
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
