feat(docs): added docs to api section

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -10,6 +10,10 @@
   overflow: hidden;
 }
 
+.homeBody {
+  background-color: #F8F9FC;
+}
+
 @media screen and (max-width: 996px) {
   .heroBanner {
     padding: 2rem;
