--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,22 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #5A5BEB; /* Base Color */
-  --ifm-color-primary-dark: #4f54ce; /* Slightly darker */
-  --ifm-color-primary-darker: #454cb2; /* Darker */
-  --ifm-color-primary-darkest: #3c4496; /* Even more dark */
-  --ifm-color-primary-light: #656aed; /* Slightly lighter */
-  --ifm-color-primary-lighter: #7179f0; /* Lighter */
-  --ifm-color-primary-lightest: #7d89f3; /* Very light */
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-color-primary: #eb9f00;
+  --ifm-color-primary-dark: #d38f00;
+  --ifm-color-primary-darker: #c88700;
+  --ifm-color-primary-darkest: #a56f00;
+  --ifm-color-primary-light: #ffae03;
+  --ifm-color-primary-lighter: #ffb10f;
+  --ifm-color-primary-lightest: #ffbd32;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #898bfa; /* Base color for dark mode, lighter than the default */
-  --ifm-color-primary-dark: #7d7ff7; /* Slightly darker */
-  --ifm-color-primary-darker: #7273f4; /* Darker */
-  --ifm-color-primary-darkest: #6667f1; /* Even more dark */
-  --ifm-color-primary-light: #9597fd; /* Slightly lighter */
-  --ifm-color-primary-lighter: #a1a3ff; /* Lighter */
-  --ifm-color-primary-lightest: #adaeff; /* Very light */
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #eb9f00;
+  --ifm-color-primary-dark: #d38f00;
+  --ifm-color-primary-darker: #c88700;
+  --ifm-color-primary-darkest: #a56f00;
+  --ifm-color-primary-light: #ffae03;
+  --ifm-color-primary-lighter: #ffb10f;
+  --ifm-color-primary-lightest: #ffbd32;
 }
