feat(components): added new font to side

--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -20,7 +20,9 @@
 }
 
 .featuresSpam {
+  text-align: center;
   position: absolute;
+  max-width: 230px;
   font-weight: 700;
   font-size: 24px;
   color: white;
